[tool.poetry]
name = "ml-env"
version = "0.2.0-dev"
description = ""
authors = ["Rafal Skolasinski <r.j.skolasinski@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.8"
numpy = "^1.23.5"
adaptive = "^0.15.1"

scikit-learn = "^1.2.2"
scikit-image = "^0.20.0"

matplotlib = "^3.3.2"
plotly = "^5.1.0"

requests = "^2.24.0"
seaborn = "^0.11.0"

deepdish = "^0.3.6"
pandas = "^1.3.1"
xarray = "^0.19.0"
xyzpy = "^1.0.0"

h5py = "^3.1.0"
SQLAlchemy = "^1.3.20"

numba = "^0.56.4"
numexpr = "^2.7.1"

statsmodels = "^0.13.1"

mxnet = { version = "^1.7.0", optional = true }
tensorflow = { version = "^2.6.0", optional = true }
torch = { version = "^1.7.1", optional = true }
dash = "^1.21.0"
keras-tuner = "^1.0.4"

[tool.poetry.extras]
tensorflow = ["tensorflow"]
torch = ["torch"]
mxnet = ["mxnet"]

[tool.poetry.dev-dependencies]
jupyterlab = "~3.0"
ipywidgets = "^7.6.3"
nbdime = "^3.1.0"
jedi = "^0.18.0"

black = "^21.7b0"
nbqa = "^1.7.0"
pytest = "^6.0.2"
pyflakes = "^2.2.0"

pytest-cov = "^2.10.1"
pytest-flakes = "^4.0.2"
line-profiler = "^3.0.2"
isort = "^5.7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
